epoch_core/tests/compile_fail/aggregate_as_projection.stderr
error[E0277]: the trait bound `TestAggregate: Projection<TestEvent>` is not satisfied
   --> tests/compile_fail/aggregate_as_projection.rs:223:27
    |
223 |     let _ = bus.subscribe(handler);
    |                 --------- ^^^^^^^ unsatisfied trait bound
    |                 |
    |                 required by a bound introduced by this call
    |
help: the trait `Projection<TestEvent>` is not implemented for `TestAggregate`
   --> tests/compile_fail/aggregate_as_projection.rs:125:1
    |
125 | struct TestAggregate {
    | ^^^^^^^^^^^^^^^^^^^^
help: the trait `epoch_core::event_store::EventObserver<ED>` is implemented for `epoch_core::projection::ProjectionHandler<P>`
   --> src/projection.rs
    |
    | / impl<ED, P> crate::event_store::EventObserver<ED> for ProjectionHandler<P>
    | | where
    | |     ED: EventData + Send + Sync + 'static,
    | |     P: Projection<ED> + Send + Sync,
    | |____________________________________^
    = note: required for `epoch_core::projection::ProjectionHandler<TestAggregate>` to implement `epoch_core::event_store::EventObserver<TestEvent>`
note: required by a bound in `subscribe`
   --> src/event_store.rs
    |
    |     fn subscribe<T>(
    |        --------- required by a bound in this associated function
...
    |         T: EventObserver<Self::EventType> + Send + Sync + 'static;
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EventBus::subscribe`
    